# elec

./: Cargo.toml  LICENSE  README.md
data/NB/: publicHolidaysNSW.csv
data/NB/energy/: consumption.csv  feedIn.csv
data/NB/gloBird2023SingleTariff/: consumption.csv  feedIn.csv  supply.csv
data/NB/gloBird2024TouTariff/: consumption.csv  supply.csv
data/NB/redEnergy2024SingleTariff/: consumption.csv
data/NB/redEnergy2024TouTariff/: feedIn.csv  supply.csv
data/test/: TestResultWorkings.ods  publicHolidaysTest.csv
data/test/energy/: consumption.csv  feedIn.csv
data/test/tariff/: consumption.csv
src/: main.rs
