[package]
name = "elec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.4", features = ["derive"] }
sscanf = { version = "0.4" }
log = { version = "0.4" }
env_logger = {version = "0.10" }
csv = { version = "1.3" }
chrono = { version = "0.4" }
assert_float_eq = { version = "1.1.3" }
